--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body><header></header>
 <section>
- <p>(설명문)가나다 순으로 자신의 이름을 입력, 마지막 작성자는 홍X동과 (설명문)을 반드시 지울것 </p>
+ <li><a href="https://ksh0685.github.io/basicHtml.html" target="_blank">basicHtml</a></li>
  <ol type="1">
  <li><a href="https://ksh0685.github.io/index.html: target="_blank">강X형</a></li>
  </ol></section>
