--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body><header></header>
 <section>
  <ol type="1">
- <li><a href="https://ksh0685.github.io/index.html: target="_blank">강X형</a></li>
   <li><a href="https://ksh0685.github.io/basicHtml.html" target="_blank">basicHtml</a></li>
+  <ol type="2">
   <li><a href="https://ksh0685.github.io/gloabalAttr.html" target="_blank">gloabalAttr</a></li>
+   <ol type="3">
   <li><a href="https://ksh0685.github.io/globalEvent.html" target="_blank">globalEvent</a></li>
+    <ol type="4">
   <li><a href="https://ksh0685.github.io/koreaAnthem.html" target="_blank">koreaAnthem</a></li>
   
  </ol></section>
