--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body><header></header>
 <section>
- <h1 id="aList">주차별 </h1>
+ <h1 id="aList">주차별 실습</h1>
+ <li>1주차 실습
+ <ol type="1">
+<li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">basicHtml</a></li>
+ <li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">basicHtml</a></li>
+<li><a href="https://ksh0685.github.io/20190307/2019030701.html" target="_blank">basicHtml</a></li>
+ 
  <li>2주차 실습
  <ol type="1">
 <li><a href="https://ksh0685.github.io/basicHtml.html" target="_blank">basicHtml</a></li>
