--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
  <h1 id="aList">인터넷 프로그래밍</h1>
  <li>1주차
  <ol type="1">
-<li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">basicHtml</a></li>
+<li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">index(0)</a></li>
  <li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">basicHtml</a></li>
-<li><a href="https://ksh0685.github.io/20190307/2019030701.html" target="_blank">basicHtml</a></li>
+<li><a href="https://ksh0685.github.io/20190307/2019030701.html" target="_blank">2019030701</a></li>
  
  <li>2주차
  <ol type="1">
