--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 <li><a href="https://ksh0685.github.io/gloabalAttr.html" target="_blank">gloabalAttr</a></li>
  <li><a href="https://ksh0685.github.io/globalEvent.html" target="_blank">globalEvent</a></li> 
   <li><a href="https://ksh0685.github.io/koreaAnthem.html" target="_blank">koreaAnthem</a></li>
-  </ol>
- </ol></section>
+   </ol>
+  
+   <li>3주차
+ <ol type="1">
+ <li><a href="https://ksh0685.github.io/20190320/basicChar.html" target="_blank">basicChar</a></li>
+   <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">basicHeading</a></li>
+     <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">basicPBrHr</a></li>
+   <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">bodyBasic</a></li>
+    </ol>
+  
+  
+  
+ </section>
 </body></html>
