--- a/index.html
+++ b/index.html
@@ -32,9 +32,18 @@
    <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">basicHeading</a></li>
      <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">basicPBrHr</a></li>
    <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">bodyBasic</a></li>
-    </ol>
+  <li><a href="https://ksh0685.github.io/20190320/headBasic.html" target="_blank">headBasic</a></li>
+  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
+  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem4.html" target="_blank">koreaAnthem4</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/advTable.html" target="_blank">advTable</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/advTable1.html" target="_blank">advTable1</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicDList.html" target="_blank">basicDList</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicList.html" target="_blank">basicList</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">basicTable1</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">tableHw</a></li>
+   <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">tableSpan</a></li>
   
   
-  
+    </ol>   
  </section>
 </body></html>
