--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
  
  <li>2주차
  <ol type="1">
-<li><a href="https://ksh0685.github.io/basicHtml.html" target="_blank">basicHtml</a></li>
-<li><a href="https://ksh0685.github.io/gloabalAttr.html" target="_blank">gloabalAttr</a></li>
- <li><a href="https://ksh0685.github.io/globalEvent.html" target="_blank">globalEvent</a></li> 
-  <li><a href="https://ksh0685.github.io/koreaAnthem.html" target="_blank">koreaAnthem</a></li>
+<li><a href="https://ksh0685.github.io/201903013/basicHtml.html" target="_blank">basicHtml</a></li>
+<li><a href="https://ksh0685.github.io/201903013/gloabalAttr.html" target="_blank">gloabalAttr</a></li>
+ <li><a href="https://ksh0685.github.io/201903013/globalEvent.html" target="_blank">globalEvent</a></li> 
+  <li><a href="https://ksh0685.github.io/201903013/koreaAnthem.html" target="_blank">koreaAnthem</a></li>
    </ol>
   
    <li>3주차
