--- a/20190327/divSpan.html
+++ b/20190327/divSpan.html
@@ -1,4 +1,4 @@
-<!docytpe>   <!--  divSpan.html -->
+<!doctype>   <!--  divSpan.html -->
 <html lang="ko">
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>HTML5 DIV SPAN실습</title>
