--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  a:hover {text-decoration:underline;}a:active {color:red; text-decoration:none;}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<title>20XX</title>
+<title>인터넷 프로그래밍</title>
 </head>
 <body><header></header>
 <section>
