--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
      <li><a href="https://ksh0685.github.io/20190327/divSpan.html" target="_blank">divSpan</a></li>
      <li><a href="https://ksh0685.github.io/20190327/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
      <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">advDiv</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">basicSemantic</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">basicModel</a></li>
       </ol>
       
  </section>
