--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">basicTable1</a></li>
     <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">tableHw</a></li>
    <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">tableSpan</a></li>
+  <li><a href="https://ksh0685.github.io/20190320/myTimeTable.html" target="_blank">시간표</a></li>
    </ol>   
     
      <li>4주차
