--- a/20190320/myTimeTable.html
+++ b/20190320/myTimeTable.html
@@ -25,31 +25,31 @@
 </thead>
 <tbody>
  <tr>
-  <td>09시~10시</td><td>-</td><td>-</td><td rowspan="2" class="subject1">자료구조 및 실습</td><td>-</td><td>-</td>
+  <td>09시~10시</td><td> </td><td> </td><td rowspan="2" class="subject1">자료구조 및 실습</td><td> </td><td> </td>
  </tr>
  <tr>
-  <td>10시~11시</td><td>-</td><td>-</td><td>-</td><td>-</td>
+  <td>10시~11시</td><td> </td><td> </td><td> </td><td> </td>
  </tr>
  <tr>
-  <td>11시~12시</td><td>-</td><td rowspan="2" class="subject1">자료구조 및 실습</td><td>-</td><td>-</td><td>-</td>
+  <td>11시~12시</td><td> </td><td rowspan="2" class="subject1">자료구조 및 실습</td><td> </td><td> </td><td> </td>
  </tr>
 <tr>
-<td>12시~13시</td><td>-</td><td rowspan="2" class="subject2">인터넷 프로그래밍</td><td>-</td><td rowspan="3" class="subject3">  미래에너지  </td>
+<td>12시~13시</td><td> </td><td rowspan="2" class="subject2">인터넷 프로그래밍</td><td> </td><td rowspan="3" class="subject3">  미래에너지  </td>
 </tr>
 <tr>
-<td>13시~14시</td><td>-</td><td class="subject4">디지털 논리회로</td><td rowspan="2" class="subject2">인터넷 프로그래밍</td>
+<td>13시~14시</td><td> </td><td class="subject4">디지털 논리회로</td><td rowspan="2" class="subject2">인터넷 프로그래밍</td>
 </tr>
 <tr>
-<td>14시~15시</td><td rowspan="2" class="subject4">디지털 논리회로</td><td>-</td><td rowspan="4" class="subject5">C++ 프로그래밍</td>
+<td>14시~15시</td><td rowspan="2" class="subject4">디지털 논리회로</td><td> </td><td rowspan="4" class="subject5">C++ 프로그래밍</td>
 </tr>
 <tr>
-<td>15시~16시</td><td>-</td><td>-</td><td>-</td>
+<td>15시~16시</td><td> </td><td> </td><td> </td>
 </tr>
 <tr>
-<td>16시~17시</td><td>-</td><td>-</td><td>-</td><td>-</td>
+<td>16시~17시</td><td> </td><td> </td><td> </td><td> </td>
 </tr>
 <tr>
-<td>17시~18시</td><td>-</td><td>-</td><td>-</td><td>-</td>
+<td>17시~18시</td><td> </td><td> </td><td> </td><td> </td>
 </tr>
 </tbody>
 </table>
