--- a/20190328/advAnchor.html
+++ b/20190328/advAnchor.html
@@ -1,4 +1,4 @@
-<!docytpe>   <!--  advAnchor.html -->
+<!doctype>   <!--  advAnchor.html -->
 <html>
 <head>
 <meta charset="utf-8"/>
@@ -13,6 +13,7 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
 </head>
 <body>
  <h3 id="chapter1">제 1장</h3>
+ <p>제 1장 입니다. 제 1장은 다음을 정의합니다.</p>
   <p>다음</p>
   <a href="http://www.google.com" target="_blank">구글이동(새윈도우)</a><br/>
   <a href="anchor2.html">사이트내문서이동</a><br/>
