--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
      <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">advDiv</a></li>
      <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">basicSemantic</a></li>
      <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">basicModel</a></li>
+     <li><a href="https://ksh0685.github.io/20190328/anchor1.html" target="_blank">앵커 실습(anchor1)</a></li>
+     <li><a href="https://ksh0685.github.io/20190328/advAnchor.html" target="_blank">앵커 실습2(advAnchor)</a></li>
+     <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
+  
+  
+  
       </ol>
       
  </section>
