--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
  <h1 id="aList">인터넷 프로그래밍</h1>
  <li>1주차
  <ol type="1">
-<li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">index(0)</a></li>
- <li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">basicHtml</a></li>
-<li><a href="https://ksh0685.github.io/20190307/2019030701.html" target="_blank">2019030701</a></li>
+<li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">자바 스크립트 실습(index(0))</a></li>
+ <li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">애국가(basicHtml)</a></li>
+<li><a href="https://ksh0685.github.io/20190307/2019030701.html" target="_blank">공공 포털(2019030701)</a></li>
   </ol>
  
  <li>2주차
  <ol type="1">
-<li><a href="https://ksh0685.github.io/20190313/basicHtml.html" target="_blank">basicHtml</a></li>
-<li><a href="https://ksh0685.github.io/20190313/gloabalAttr.html" target="_blank">gloabalAttr</a></li>
- <li><a href="https://ksh0685.github.io/20190313/globalEvent.html" target="_blank">globalEvent</a></li> 
-  <li><a href="https://ksh0685.github.io/20190313/koreaAnthem.html" target="_blank">koreaAnthem</a></li>
+<li><a href="https://ksh0685.github.io/20190313/basicHtml.html" target="_blank">애국가1(basicHtml)</a></li>
+<li><a href="https://ksh0685.github.io/20190313/gloabalAttr.html" target="_blank">애국가2(gloabalAttr)</a></li>
+ <li><a href="https://ksh0685.github.io/20190313/globalEvent.html" target="_blank">클릭(globalEvent)</a></li> 
+  <li><a href="https://ksh0685.github.io/20190313/koreaAnthem.html" target="_blank">애국가3(koreaAnthem)</a></li>
    </ol>
   
    <li>3주차
@@ -47,11 +47,11 @@
     
      <li>4주차
  <ol type="1">
-     <li><a href="https://ksh0685.github.io/20190327/divSpan.html" target="_blank">divSpan</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">advDiv</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">basicSemantic</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">basicModel</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/divSpan.html" target="_blank">HTML5 DIV SPAN실습(divSpan)</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/basicPDivSpan.html" target="_blank">문서 타이틀 표제(basicPDivSpan)</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">div 학습(advDiv)</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">시멘틱 학습(basicSemantic)</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">기본 모델 학습(basicModel)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/anchor1.html" target="_blank">앵커 실습(anchor1)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/advAnchor.html" target="_blank">앵커 실습2(advAnchor)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
