--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   
    <li>3주차
  <ol type="1">
- <li><a href="https://ksh0685.github.io/20190320/basicChar.html" target="_blank">basicChar</a></li>
-   <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">basicHeading</a></li>
-     <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">basicPBrHr</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/basicChar.html" target="_blank">글자 태그(basicChar)</a></li>
+   <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">헤딩(basicHeading)</a></li>
+     <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">HTML요소(basicPBrHr)</a></li>
    <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">bodyBasic</a></li>
   <li><a href="https://ksh0685.github.io/20190320/headBasic.html" target="_blank">headBasic</a></li>
   <li><a href="https://ksh0685.github.io/20190320/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
