--- a/20190328/basicSemantic2.html
+++ b/20190328/basicSemantic2.html
@@ -6,7 +6,7 @@
 <style>
 header, nav, section, article, aside, footer
 {border:1px solid gray; margin:5px; padding:8px; width:1000px;}
-headerimg { width: 990px; height:200px; }
+header img { width: 990px; height:200px; }
 section {width:750px; float:left;}
 section section {width:725px; float:left; }
 aside {width:221px; float:left; line-height:30px;}
@@ -34,7 +34,7 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
     <li><a href="anchor2.html">사이트내문서이동</a></li>
     <li><a href="#chapter1">제 1장이동(북마크이동)</a></li></ul>
    </nav>
-<section>  <!-- main -->
+<section>  <! -- main -->
 <section><h3 id="chapter1">제 1장</h3>
   <p>제 1장 입니다. 제 1장은 다음을 정의합니다.</p>
   <p>다음</p>
@@ -48,10 +48,12 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
   <p>제 1장에서 공부한 내용이 궁금하다면 다음을 <a href="#chapter1">클릭</a>하세요.</p></section>
  <section><h3 id="chapter3">제 3장</h3>
   <p>제 3장 입니다. 제 3장은 무엇을 정의합니다.</p>
-  <table><tr><th>이동주소</th><th>사이트명</th><th>설명</th></tr>
+  <table>
+   <tr><th>이동주소</th><th>사이트명</th><th>설명</th></tr>
   <tr><td>구글</td><td><a href="https://www.naver.com">네이버</a></td><td>네이버</td></tr>
   <tr><td>사이트다른문서</td><td><a href="anchor2.html">anchor2.html로이동</a></td><td>anchor2</td></tr>
   <tr><td>제 1장</td><td><a href="#chapter1">제 1장이동(북마크이동)</a></td><td>제 1장</td></tr></table>
+  </section>
   </section>   <!-- /main -->
   <aside>
    <ul>
