--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
      <li><a href="https://ksh0685.github.io/20190328/anchor1.html" target="_blank">앵커 실습(anchor1)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/advAnchor.html" target="_blank">앵커 실습2(advAnchor)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
+     <li><a href="https://ksh0685.github.io/20190328/basicImage.html" target="_blank">이미지(basicImage)</a></li>
+     <li><a href="https://ksh0685.github.io/20190328/basicSemantic2.html" target="_blank">시멘틱 실습2(basicSemantic2)</a></li>
   
   
   
