--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
  <li><a href="https://ksh0685.github.io/20190320/basicChar.html" target="_blank">글자 태그(basicChar)</a></li>
    <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">헤딩(basicHeading)</a></li>
      <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">HTML요소(basicPBrHr)</a></li>
-   <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">bodyBasic</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/headBasic.html" target="_blank">headBasic</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem4.html" target="_blank">koreaAnthem4</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/advTable.html" target="_blank">advTable</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/advTable1.html" target="_blank">advTable1</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicDList.html" target="_blank">basicDList</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicList.html" target="_blank">basicList</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">basicTable1</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">tableHw</a></li>
-   <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">tableSpan</a></li>
+   <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">클릭 로딩(bodyBasic)</a></li>
+  <li><a href="https://ksh0685.github.io/20190320/headBasic.html" target="_blank">애국가(headBasic)</a></li>
+  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem3.html" target="_blank">애국가1~4절(koreaAnthem3)</a></li>
+  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem4.html" target="_blank">애국가1~4절2(koreaAnthem4)</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/advTable.html" target="_blank">도시현황 테이블(advTable)</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/advTable1.html" target="_blank">도시현황 테이블2(advTable1)</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicDList.html" target="_blank">기술 리스트(basicDList)</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicList.html" target="_blank">목록 태그(basicList)</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">테이블 basicTable1</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">테이블 태그(tableHw)</a></li>
+   <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">테이블 행열 합치기(tableSpan)</a></li>
   <li><a href="https://ksh0685.github.io/20190320/myTimeTable.html" target="_blank">시간표</a></li>
    </ol>   
     
@@ -49,7 +49,8 @@
  <ol type="1">
      <li><a href="https://ksh0685.github.io/20190327/divSpan.html" target="_blank">HTML5 DIV SPAN실습(divSpan)</a></li>
      <li><a href="https://ksh0685.github.io/20190327/basicPDivSpan.html" target="_blank">문서 타이틀 표제(basicPDivSpan)</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">div 학습(advDiv)</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/basicDiv.html" target="_blank">div 학습(basicDiv)</a></li>
+     <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">div 학습2(advDiv)</a></li>
      <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">시멘틱 학습(basicSemantic)</a></li>
      <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">기본 모델 학습(basicModel)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/anchor1.html" target="_blank">앵커 실습(anchor1)</a></li>
