--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
      <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/basicImage.html" target="_blank">이미지(basicImage)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/basicSemantic2.html" target="_blank">시멘틱 실습2(basicSemantic2)</a></li>
-  
+     <li><a href="https://ksh0685.github.io/20190328/ismap.html" target="_blank">이미지 링크(ismap)</a></li>
+
   
   
       </ol>
