--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <li><a href="https://ksh0685.github.io/20190321/advTable1.html" target="_blank">도시현황 테이블2(advTable1)</a></li>
     <li><a href="https://ksh0685.github.io/20190321/basicDList.html" target="_blank">기술 리스트(basicDList)</a></li>
     <li><a href="https://ksh0685.github.io/20190321/basicList.html" target="_blank">목록 태그(basicList)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">테이블 basicTable1</a></li>
+    <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">테이블 학습(basicTable1)</a></li>
     <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">테이블 태그(tableHw)</a></li>
    <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">테이블 행열 합치기(tableSpan)</a></li>
   <li><a href="https://ksh0685.github.io/20190320/myTimeTable.html" target="_blank">시간표</a></li>
