--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
      <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/basicImage.html" target="_blank">이미지(basicImage)</a></li>
      <li><a href="https://ksh0685.github.io/20190328/basicSemantic2.html" target="_blank">시멘틱 실습2(basicSemantic2)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/ismap.html" target="_blank">이미지 링크(ismap)</a></li>
-
-  
-  
+     <li><a href="https://ksh0685.github.io/20190328/ismap.html" target="_blank">이미지맵(ismap)</a></li> 
       </ol>
       
+      <li>5주차
+ <ol type="1">
+      <li><a href="https://ksh0685.github.io/20190404/imageMap.html" target="_blank">이미지맵(imageMap)</a></li> 
+  
+  
+  </ol>
  </section>
 </body></html>
