--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!doctype html>   <!--index.html -->
-<html><head><meta charset="utf-8"/>
- <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<html>
+ <head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>
- a:link {color:blue; text-decoration:none;}a:visited {color:purple; text-decoration:none;}
- a:hover {text-decoration:underline;}a:active {color:red; text-decoration:none;}
+  a:link {color:blue; text-decoration:none;}a:visited {color:purple; text-decoration:none;}
+  a:hover {text-decoration:underline;}a:active {color:red; text-decoration:none;}
 </style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <title>인터넷 프로그래밍</title>
 </head>
 <body><header></header>
 <section>
  <h1 id="aList">인터넷 프로그래밍</h1>
+ 
  <li>1주차
  <ol type="1">
 <li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">자바 스크립트 실습(index(0))</a></li>
- <li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">애국가(basicHtml)</a></li>
+<li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">애국가(basicHtml)</a></li>
 <li><a href="https://ksh0685.github.io/20190307/2019030701.html" target="_blank">공공 포털(2019030701)</a></li>
   </ol>
  
@@ -22,43 +24,43 @@
  <ol type="1">
 <li><a href="https://ksh0685.github.io/20190313/basicHtml.html" target="_blank">애국가1(basicHtml)</a></li>
 <li><a href="https://ksh0685.github.io/20190313/gloabalAttr.html" target="_blank">애국가2(gloabalAttr)</a></li>
- <li><a href="https://ksh0685.github.io/20190313/globalEvent.html" target="_blank">클릭(globalEvent)</a></li> 
-  <li><a href="https://ksh0685.github.io/20190313/koreaAnthem.html" target="_blank">애국가3(koreaAnthem)</a></li>
+<li><a href="https://ksh0685.github.io/20190313/globalEvent.html" target="_blank">클릭(globalEvent)</a></li> 
+<li><a href="https://ksh0685.github.io/20190313/koreaAnthem.html" target="_blank">애국가3(koreaAnthem)</a></li>
    </ol>
   
-   <li>3주차
+  <li>3주차
  <ol type="1">
  <li><a href="https://ksh0685.github.io/20190320/basicChar.html" target="_blank">글자 태그(basicChar)</a></li>
-   <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">헤딩(basicHeading)</a></li>
-     <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">HTML요소(basicPBrHr)</a></li>
-   <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">클릭 로딩(bodyBasic)</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/headBasic.html" target="_blank">애국가(headBasic)</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem3.html" target="_blank">애국가1~4절(koreaAnthem3)</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/koreaAnthem4.html" target="_blank">애국가1~4절2(koreaAnthem4)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/advTable.html" target="_blank">도시현황 테이블(advTable)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/advTable1.html" target="_blank">도시현황 테이블2(advTable1)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicDList.html" target="_blank">기술 리스트(basicDList)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicList.html" target="_blank">목록 태그(basicList)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">테이블 학습(basicTable1)</a></li>
-    <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">테이블 태그(tableHw)</a></li>
-   <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">테이블 행열 합치기(tableSpan)</a></li>
-  <li><a href="https://ksh0685.github.io/20190320/myTimeTable.html" target="_blank">시간표</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">헤딩(basicHeading)</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/basicPBrHr.html" target="_blank">HTML요소(basicPBrHr)</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/bodyBasic.html" target="_blank">클릭 로딩(bodyBasic)</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/headBasic.html" target="_blank">애국가(headBasic)</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/koreaAnthem3.html" target="_blank">애국가1~4절(koreaAnthem3)</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/koreaAnthem4.html" target="_blank">애국가1~4절2(koreaAnthem4)</a></li>
+ <li><a href="https://ksh0685.github.io/20190321/advTable.html" target="_blank">도시현황 테이블(advTable)</a></li>  
+ <li><a href="https://ksh0685.github.io/20190321/advTable1.html" target="_blank">도시현황 테이블2(advTable1)</a></li>
+ <li><a href="https://ksh0685.github.io/20190321/basicDList.html" target="_blank">기술 리스트(basicDList)</a></li>
+ <li><a href="https://ksh0685.github.io/20190321/basicList.html" target="_blank">목록 태그(basicList)</a></li>
+ <li><a href="https://ksh0685.github.io/20190321/basicTable1.html" target="_blank">테이블 학습(basicTable1)</a></li>
+ <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">테이블 태그(tableHw)</a></li>
+ <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">테이블 행열 합치기(tableSpan)</a></li>
+ <li><a href="https://ksh0685.github.io/20190320/myTimeTable.html" target="_blank">시간표</a></li>
    </ol>   
     
-     <li>4주차
+  <li id="week04">4주차
  <ol type="1">
-     <li><a href="https://ksh0685.github.io/20190327/divSpan.html" target="_blank">HTML5 DIV SPAN실습(divSpan)</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicPDivSpan.html" target="_blank">문서 타이틀 표제(basicPDivSpan)</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicDiv.html" target="_blank">div 학습(basicDiv)</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">div 학습2(advDiv)</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">시멘틱 학습(basicSemantic)</a></li>
-     <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">기본 모델 학습(basicModel)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/anchor1.html" target="_blank">앵커 실습(anchor1)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/advAnchor.html" target="_blank">앵커 실습2(advAnchor)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/basicImage.html" target="_blank">이미지(basicImage)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/basicSemantic2.html" target="_blank">시멘틱 실습2(basicSemantic2)</a></li>
-     <li><a href="https://ksh0685.github.io/20190328/ismap.html" target="_blank">이미지맵(ismap)</a></li> 
+  <li><a href="https://ksh0685.github.io/20190327/divSpan.html" target="_blank">HTML5 DIV SPAN실습(divSpan)</a></li>
+  <li><a href="https://ksh0685.github.io/20190327/basicPDivSpan.html" target="_blank">문서 타이틀 표제(basicPDivSpan)</a></li>
+  <li><a href="https://ksh0685.github.io/20190327/basicDiv.html" target="_blank">div 학습(basicDiv)</a></li>
+  <li><a href="https://ksh0685.github.io/20190327/advDiv.html" target="_blank">div 학습2(advDiv)</a></li>
+  <li><a href="https://ksh0685.github.io/20190327/basicSemantic.html" target="_blank">시멘틱 학습(basicSemantic)</a></li>
+  <li><a href="https://ksh0685.github.io/20190327/basicModel.html" target="_blank">기본 모델 학습(basicModel)</a></li>
+  <li><a href="https://ksh0685.github.io/20190328/anchor1.html" target="_blank">앵커 실습(anchor1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190328/advAnchor.html" target="_blank">앵커 실습2(advAnchor)</a></li>
+  <li><a href="https://ksh0685.github.io/20190328/basicSemantic1.html" target="_blank">시멘틱 실습(basicSemantic1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190328/basicImage.html" target="_blank">이미지(basicImage)</a></li>
+  <li><a href="https://ksh0685.github.io/20190328/basicSemantic2.html" target="_blank">시멘틱 실습2(basicSemantic2)</a></li>
+  <li><a href="https://ksh0685.github.io/20190328/ismap.html" target="_blank">이미지맵(ismap)</a></li> 
       </ol>
       
       <li>5주차
