--- a/20190404/WorldMap.html
+++ b/20190404/WorldMap.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <b>나라를 클릭하세요</b><br/>
-<img src="worldmap.gif" border=0 usemap="#world">
+<img src="worldmap.png" border=0 usemap="#world">
 <map name="world">
   <area alt='이집트' shape="poly" target="_blank" coords='628,233,628,272,669,267,657,235' href="./cairo.html">
   <area alt='리비아' shape="poly" target="_blank" coords='277,226,568,261,623,283,626,230,610,227,604,238' href="./tripoli.html"> 
