--- a/20190404/WorldMap.html
+++ b/20190404/WorldMap.html
@@ -9,8 +9,8 @@
 <b>나라를 클릭하세요</b><br/>
 <img src="worldmap.png" border=0 usemap="#world">
 <map name="world">
-  <area alt='이집트' shape="poly" target="_blank" coords='628,233,628,272,669,267,657,235' href="./cairo.html">
-  <area alt='리비아' shape="poly" target="_blank" coords='277,226,568,261,623,283,626,230,610,227,604,238' href="./tripoli.html"> 
+  <area alt='이집트' shape="poly" target="_blank" coords='628,233,628,272,669,267,657,235' href="./egypt.html">
+  <area alt='리비아' shape="poly" target="_blank" coords='277,226,568,261,623,283,626,230,610,227,604,238' href="./libya.html"> 
   <area alt='대한민국' shape="poly" target="_blank" coords='1005,205,1013,219,1021,215,1011,203' href="./korea.html"> 
   <area alt='마다가스카르' shape="poly" target="_blank" coords='706,441,702,478,715,477,727,426' href="./madagascar.html">
   <area alt='나미비아' shape="poly" target="_blank" coords='578,448,590,491,607,493,611,449' href="./namibia.html">
