--- a/20190404/oman.html
+++ b/20190404/oman.html
@@ -1,4 +1,4 @@
-<!doctype html>  <!--  yemen.html  -->
+<!doctype html>  <!--  oman.html  -->
 <html>
 <head>
 <meta charset="utf-8"/>
@@ -6,7 +6,7 @@
 <title>세계지도</title>
 </head>
 <body>
-<p>예멘를 클릭하셨습니다</p>
-<p>예멘의 수도는 < 사나 > 입니다.</p>
+<p>오만을 클릭하셨습니다</p>
+<p>오만의 수도는 <무스카트> 입니다.</p>
 </body>
 </html>
