--- a/20190404/DJU/DjuMap.html
+++ b/20190404/DJU/DjuMap.html
@@ -6,7 +6,8 @@
 <title>대전대학교</title>
 </head>
 <body>
-<b>번호를 클릭하세요</b><br/>
+<b>대전대학교 지도입니다.</b>
+<b>번호를 클릭하세요.</b><br/>
 <img src="dju.gif" border=0 usemap="#dju">
 <map name="dju">
   <area alt='남문' shape="poly" target="_blank" coords='28,388,26,416,36,419,63,392,62,364,55,365' href="./1.html">
