--- a/20190404/DJU/DjuMap.html
+++ b/20190404/DJU/DjuMap.html
@@ -8,7 +8,7 @@
 <body>
 <b>대전대학교 지도입니다.</b>
 <b>번호를 클릭하세요.</b><br/>
-<img src="dju.gif" border=0 usemap="#dju">
+<img src="dju.jpg" border=0 usemap="#dju">
 <map name="dju">
   <area alt='남문' shape="poly" target="_blank" coords='28,388,26,416,36,419,63,392,62,364,55,365' href="./1.html">
   <area alt='기초과학관' shape="poly" target="_blank" coords='167,337,167,387,189,394,200,385,274,417,280,403,280,369,298,353,215,318,204,326,185,320' href="./2.html"> 
