--- a/20190404/DJU/2.html
+++ b/20190404/DJU/2.html
@@ -6,8 +6,8 @@
 <title>대전대학교</title>
 </head>
 <body>
-<p>기초과학관을 클릭하셨습니다</p>
-<img src="2.jpg border=0>
+<p>남문을 클릭하셨습니다</p>
+<img src="2.jpg" alt="2" width="400" height="400" ismap/>
 <p>설명</p>
 </body>
 </html>
