--- a/20190404/DJU/3.html
+++ b/20190404/DJU/3.html
@@ -6,8 +6,8 @@
 <title>대전대학교</title>
 </head>
 <body>
-<p>을 클릭하셨습니다</p>
-<img src="3.jpg" alt="3" width="400" height="400" ismap/>
+<p>공학관을 클릭하셨습니다</p>
+<img src="3.jpg" alt="3" width="500" height="500" ismap/>
 <p>설명</p>
 </body>
 </html>
