--- a/20190404/DJU/2.html
+++ b/20190404/DJU/2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>을 클릭하셨습니다</p>
-<img src="2.jpg" alt="2" width="500" height="500" ismap/>
+<img src="2.JPG" alt="2" width="500" height="500" ismap/>
 <p>설명</p>
 </body>
 </html>
