--- a/20190404/DJU/1.html
+++ b/20190404/DJU/1.html
@@ -8,6 +8,6 @@
 <body>
 <p>남문을 클릭하셨습니다</p>
 <img src="1.jpg" alt="1" width="500" height="500" ismap/>
-<p>설명</p>
+<p>대전대학교 남쪽에 있는 문입니다.</p>
 </body>
 </html>
