--- a/20190404/DJU/2.html
+++ b/20190404/DJU/2.html
@@ -8,7 +8,17 @@
 <body>
 <p>기초과학관을 클릭하셨습니다</p>
 <img src="2.JPG" alt="2" width="500" height="500" ismap/>
-<p>설명</p>
+<p>자연과학대 건물로 지어졌다. 각종 첨단 실험 장비를 갖춘 실험실을 중심으로 대전대학교가 24시간 연구와 실험 실습 교육에 정진할 수 있도록 각종 기반을 제공한 건물이다. 이 건물은 불이 꺼지지 않는 대전대학교의 연구와 실험 정신을 상징한다.
+설계 세원건축 송승호
+시공 풍산건설
+준공 1994
+
+B1 매점
+1F 응용화학과, 응용화학과 실습실, 교수연구실
+2F 신소재공학과, 신소재공학과 실습실, 교수연구실
+3F 보건의료과학대학행정실, 임상병리학과, 뷰티건강관리학과, 임상병리학과 실습실, 뷰티건강관리학과 실습실, 교수연구실
+4F 생명과학과, 생명과학과 실습실, 세미나실, 임상명리학과 실습실, 교수연구실
+5F 생명과학과 실습실, 임상병리학과 실습실, 교수연구실</p>
 </body>
 </html>
 
