--- a/20190404/DJU/3.html
+++ b/20190404/DJU/3.html
@@ -8,16 +8,16 @@
 <body>
 <p>공학관을 클릭하셨습니다</p>
 <img src="3.jpg" alt="3" width="500" height="500" ismap/>
-<p>공과대 건물로 지어졌다. 남쪽 벽의 담쟁이넝쿨이 아름답다. 1985년 토목공학과 신설이 공과대학의 효시이다.
-설계 CNU건축 이재성
-시공 우진건업
-준공 1987
+  <p>공과대 건물로 지어졌다. 남쪽 벽의 담쟁이넝쿨이 아름답다. 1985년 토목공학과 신설이 공과대학의 효시이다.</p>
+<p>설계 CNU건축 이재성</p>
+<p>시공 우진건업</p>
+<p>준공 1987</p>
 
-1F 토목공학과, 토목공학과 실습실, 교수연구실
-2F 소방방재학과, 소방방재학과 실습실, 소방방재학과 연구실, 교수연구실
-3F 건설안전방재공학과, 물리치료학과 실습실, 건설안전방재공학과 실습실, 교수연구실
-4F 환경공학과, 환경공학과 실습실, 교수연구실
-5F 건축공학과, 건축학과, 공대행정실, 건축공학과 실습실, 건축학과 실습실, 교수연구실
-6F 건축학과 실습실, 식품영양학과 실습실, 교수연구실</p>
+<p>1F 토목공학과, 토목공학과 실습실, 교수연구실</p>
+<p>2F 소방방재학과, 소방방재학과 실습실, 소방방재학과 연구실, 교수연구실</p>
+<p>3F 건설안전방재공학과, 물리치료학과 실습실, 건설안전방재공학과 실습실, 교수연구실</p>
+<p>4F 환경공학과, 환경공학과 실습실, 교수연구실</p>
+<p>5F 건축공학과, 건축학과, 공대행정실, 건축공학과 실습실, 건축학과 실습실, 교수연구실</p>
+<p>6F 건축학과 실습실, 식품영양학과 실습실, 교수연구실</p>
 </body>
 </html>
