--- a/20190410/basicSemantic3.html
+++ b/20190410/basicSemantic3.html
@@ -41,7 +41,7 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
 자동차와 자동차간 거리가 1미터 이내로 사고 우려가 높았습니다. 하지만, 다행히도 사고는 발생하지 않았습니다.
 아래가 교통상황 입니다.</p>
  <h4>비디오 태그1 320*200</h4>
-  <video controls="controls" height="320" withe="200">
+  <video controls="controls" height="320" width="200">
    <source src="traffic.mp4" type="video/mp4">
    <source src="boom.ogg" type="video/ogg">
    <source src="boom.webm" type="video/webm">
