--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
        
       <li>6주차
  <ol type="1">
-<li><a href="https://ksh0685.github.io/20190410/basicAudio.html" target="_blank">오디오실습(basicAudio)</a></li>
-<li><a href="https://ksh0685.github.io/20190410/basicVideo.html" target="_blank">비디오실습(basicVideo)</a></li>
-<li><a href="https://ksh0685.github.io/20190410/basicSemantic3.html" target="_blank">시멘틱학습(basicSemantic3)</a></li>
-<li><a href="https://ksh0685.github.io/20190410/anchor2.html" target="_blank">교통상황(anchor2)</a></li>
-<li><a href="https://ksh0685.github.io/20190410/formText1.html" target="_blank">폼학습(formText1)</a></li>
- 
+  <li><a href="https://ksh0685.github.io/20190410/basicAudio.html" target="_blank">오디오실습(basicAudio)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/basicVideo.html" target="_blank">비디오실습(basicVideo)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/basicSemantic3.html" target="_blank">시멘틱학습(basicSemantic3)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/anchor2.html" target="_blank">교통상황(anchor2)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formText1.html" target="_blank">폼학습(formText1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formRadio1.html" target="_blank">폼학습2(formRadio1)</a></li>
   <br/>
   <br/>
   </ol>
