--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
   <li><a href="https://ksh0685.github.io/20190410/basicSemantic3.html" target="_blank">시멘틱학습(basicSemantic3)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/anchor2.html" target="_blank">교통상황(anchor2)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/formText1.html" target="_blank">폼학습(formText1)</a></li>
-  <li><a href="https://ksh0685.github.io/20190410/formRadio1.html" target="_blank">폼학습2(formRadio1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formRadio1.html" target="_blank">폼 라디오(formRadio1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formCheckbox1.html" target="_blank">폼 체크박스(formCheckbox1)</a></li>
   <br/>
   <br/>
   </ol>
