--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
   <li><a href="https://ksh0685.github.io/20190410/formText1.html" target="_blank">폼학습(formText1)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/formRadio1.html" target="_blank">폼 라디오(formRadio1)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/formCheckbox1.html" target="_blank">폼 체크박스(formCheckbox1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formSearch1.html" target="_blank">폼 서치(formSearch1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formDateTime1.html" target="_blank">폼 날짜시간(form1)</a></li>
   <br/>
   <br/>
   </ol>
