--- a/20190404/DJU/25.html
+++ b/20190404/DJU/25.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>국제화거리를 클릭하셨습니다</p>
-
+<img src="25.jpg" alt="25" width="500" height="500" ismap/>
 <p>국제생활관 뒤쪽에 있는 길이다.</p>
 </body>
 </html>
