--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section>
  <h1 id="aList">인터넷 프로그래밍</h1>
  
- <li>1주차
+ <li id="week01">1주차
  <ol type="1">
 <li><a href="https://ksh0685.github.io/20190306/index(0).html" target="_blank">자바 스크립트 실습(index(0))</a></li>
 <li><a href="https://ksh0685.github.io/20190306/basicHtml.html" target="_blank">애국가(basicHtml)</a></li>
@@ -23,7 +23,7 @@
   <br/>
   </ol>
  
- <li>2주차
+ <li id="week02">2주차
  <ol type="1">
 <li><a href="https://ksh0685.github.io/20190313/basicHtml.html" target="_blank">애국가1(basicHtml)</a></li>
 <li><a href="https://ksh0685.github.io/20190313/gloabalAttr.html" target="_blank">애국가2(gloabalAttr)</a></li>
@@ -34,7 +34,7 @@
   <br/> 
    </ol>
   
-  <li>3주차
+  <li id="week03">3주차
  <ol type="1">
  <li><a href="https://ksh0685.github.io/20190320/basicChar.html" target="_blank">글자 태그(basicChar)</a></li>
  <li><a href="https://ksh0685.github.io/20190320/basicHeading.html" target="_blank">헤딩(basicHeading)</a></li>
@@ -75,7 +75,7 @@
   <br/>
   </ol>
       
-      <li>5주차
+      <li id="week05">5주차
  <ol type="1">   
   <li><a href="https://ksh0685.github.io/20190404/imageMap.html" target="_blank">이미지맵(imageMap)</a></li>   
   <li><a href="https://ksh0685.github.io/20190404/WorldMap.html" target="_blank">세계지도(WorldMap)</a></li> 
@@ -85,7 +85,7 @@
   <br/>
   </ol>
        
-      <li>6주차
+      <li id="week06">6주차
  <ol type="1">
   <li><a href="https://ksh0685.github.io/20190410/basicAudio.html" target="_blank">오디오실습(basicAudio)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/basicVideo.html" target="_blank">비디오실습(basicVideo)</a></li>
