--- a/20190411/formSelect1.html
+++ b/20190411/formSelect1.html
@@ -11,13 +11,13 @@
  <fieldset>
    <legend>식사 선택</legend>
     <label for="timex">시간</label>
-    <select id="timex" name="mealtime"/>
+    <select id="timex" name="mealtime">
     <option value="아침">아침</option>
     <option value="점심">점심</option>
     <option value="저녁" selected>저녁</option>
     </select>
     <label for="mealx">식사</label>
-    <select id="mealx" name="meal"/>
+    <select id="mealx" name="meal">
     <option value="백미">백미</option>
     <option value="현미">현미</option>
     <option value="김치">김치</option>
