--- a/20190411/basicSemantic4.html
+++ b/20190411/basicSemantic4.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--  basicSemantic4.html -->
+<!doctype html> <!--  basicSemantic3.html -->
 <html>
 <head>
 <meta charset="utf-8"/>
@@ -39,9 +39,9 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
  </header>
   <nav>
    <ul>
-    <li><a href="https://www.naver.com" target="_blank">네이버(새윈도우)</a></li>
-    <li><a href="anchor2.html">사이트내문서이동</a></li>
-    <li><a href="#chapter1">제 1장이동(북마크이동)</a></li>
+    <li><a href="https://www.w3.org/TR/html5/" target="_blank">HTML5</a></li>
+    <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>
+    <li><a href="https://jquerymobile.com/" target="_blank">jQuery Mobile</a></li>
     <li><a href="./jspintro.html">JSP</a></li></ul>
    </nav>
 <section>  <!-- main --> 
@@ -51,9 +51,9 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
 아래가 교통상황 입니다.</p>
  <h4>비디오 태그1 320*200</h4>
   <video controls="controls" height="200" width="320">
-   <source src="traffic.mp4" type="video/mp4">
-   <source src="boom.ogg" type="video/ogg">
-   <source src="boom.webm" type="video/webm">
+   <source src="20190410/traffic.mp4" type="video/mp4">
+   <source src="20190410/boom.ogg" type="video/ogg">
+   <source src="20190410/boom.webm" type="video/webm">
       브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!
   </video><hr/>
  </section>
