--- a/20190411/basicSemantic4.html
+++ b/20190411/basicSemantic4.html
@@ -51,9 +51,9 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
 아래가 교통상황 입니다.</p>
  <h4>비디오 태그1 320*200</h4>
   <video controls="controls" height="200" width="320">
-   <source src="20190410/traffic.mp4" type="video/mp4">
-   <source src="20190410/boom.ogg" type="video/ogg">
-   <source src="20190410/boom.webm" type="video/webm">
+   <source src="../20190410/traffic.mp4" type="video/mp4">
+   <source src="../20190410/boom.ogg" type="video/ogg">
+   <source src="../20190410/boom.webm" type="video/webm">
       브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!
   </video><hr/>
  </section>
