--- a/20190411/basicSemanticMember1.html
+++ b/20190411/basicSemanticMember1.html
@@ -45,7 +45,7 @@ a:active { color:blue; background-color:transparent; text-decoration:none; }
     <li><a href="./jspintro.html">JSP</a></li></ul>
    </nav>
 <section>  <!-- main --> 
- <section id="memberForm" action="https://jspwork.herokuapp.com/ex/regCheck.jsp" method="post">
+ <form id="memberForm" action="https://jspwork.herokuapp.com/ex/regCheck.jsp" method="post">
  <fieldset><legend>회원정보</legend>
  <fieldset><legend>이름/이메일</legend>
   <label for="stud_name">이름</label>
