--- a/20190417/basicSimple1.html
+++ b/20190417/basicSimple1.html
@@ -10,6 +10,6 @@
  </head>
 <body>
  <h4>h4 엘리먼트 고유 스타일 적용</h4>
- <h4 id="h4new">h4 엘리몬트 개발자 스타일 적용</h4>
+ <h4 id="h4new">h4 엘리트 개발자 스타일 적용</h4>
 </body>
 </html>
