--- a/20190417/embed1.html
+++ b/20190417/embed1.html
@@ -5,7 +5,7 @@
  <meta charset="utf-8"/>
  <title>내부 스타일 실습</title>
  <style>
-  h1 { color:blue; }
+  h1 { color:blue; }  /* 모든 h1 적용 */
  </style>
 </head>
 <body>
