--- a/20190411/Seasonalfood.html
+++ b/20190411/Seasonalfood.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scala=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>폼 제철 음식</title>
 <script>
 function type(obj) {
