--- a/20190411/Seasonalfood.html
+++ b/20190411/Seasonalfood.html
@@ -30,7 +30,7 @@ target.appendChild(opt);
   <fieldset><legend>계절별 제철 음식</legend>
    <label for="seasonx">계절</label>
    <select id="seasonx" name="season" onchange="season(this)">
-   <option value="S1">봄</option>
+   <option value="S1" selected>봄</option>
    <option value="S2">여름</option>
    <option value="S3">가을</option>
    <option value="S4">겨울</option>
