--- a/20190411/Seasonalfood.html
+++ b/20190411/Seasonalfood.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>폼 제철 음식</title>
 <script>
-function type(obj) {
+function season(obj) {
 var spring = [ "달래", "우엉", "냉이", "바지락", "딸기", "두릅", "꼬막", "더덕", "쭈꾸미", "장어", "매실", "쑥", "도미", "멍게", "다슬기", "취나물", "키조개", "참다랑어", "소라", "씀바귀", "미더덕", "한라봉" ];
 var summer = [ "옥수수", "토마토", "전복", "감자", "고구마", "블루베리", "포도", "장어", "도라지", "수박", "매실", "복숭아", "참나물", "갈치", "참외", "다슬기", "참다랑어", "복분자", "소라", "자두" ];
 var fall = [ "굴", "사과", "게", "토마토", "홍합", "꼬막", "배추", "고등어", "전복", "옥수수", "감자", "고구마", "무", "꽁치", "늙은호박", "대하", "블루베리", "삼치", "유자", "배", "참나물", "귤", "갈치", "석류", "도미", "가리비", "은행", "광어", "해삼", "과메기" ];
