--- a/index.html
+++ b/index.html
@@ -95,7 +95,17 @@
   <li><a href="https://ksh0685.github.io/20190410/formRadio1.html" target="_blank">폼 라디오(formRadio1)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/formCheckbox1.html" target="_blank">폼 체크박스(formCheckbox1)</a></li>
   <li><a href="https://ksh0685.github.io/20190410/formSearch1.html" target="_blank">폼 서치(formSearch1)</a></li>
-  <li><a href="https://ksh0685.github.io/20190410/formDateTime1.html" target="_blank">폼 날짜시간(form1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190410/formDateTime1.html" target="_blank">폼 날짜시간(formDateTime1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/formEmailAuto1.html" target="_blank">폼 이메일(formEmailAuto1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/formFormaction1.html" target="_blank">폼 액션(formFormaction1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/formSelect1.html" target="_blank">폼 셀렉트(formSelect1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/formMselect1.html" target="_blank">폼 멀티셀렉트(formMselect1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/formTextarea1.html" target="_blank">폼 텍스트(formMselect1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/basicSemantic4.html" target="_blank">홈피수정(basicSemantic4)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/anchor2.html" target="_blank">홈피수정(anchor2)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/jspintro.html" target="_blank">홈피수정(jspintro)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/reservation.html" target="_blank">음식점 예약(reservation)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/Seasonalfood.html" target="_blank">계절 제철 음식(Seasonalfood)</a></li>
   <br/>
   <br/>
   </ol>
