--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <li><a href="https://ksh0685.github.io/20190411/formSelect1.html" target="_blank">폼 셀렉트(formSelect1)</a></li>
   <li><a href="https://ksh0685.github.io/20190411/formMselect1.html" target="_blank">폼 멀티셀렉트(formMselect1)</a></li>
   <li><a href="https://ksh0685.github.io/20190411/formTextarea1.html" target="_blank">폼 텍스트(formTextarea1)</a></li>
-  <li><a href="https://ksh0685.github.io/20190411/basicSemanticMember1.html" target="_blank">(basicSemanticmember1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190411/basicSemanticMember1.html" target="_blank">회원가입(basicSemanticmember1)</a></li>
   <li><a href="https://ksh0685.github.io/20190411/basicSemantic4.html" target="_blank">홈피수정(basicSemantic4)</a></li>
   <li><a href="https://ksh0685.github.io/20190411/anchor2.html" target="_blank">홈피수정(anchor2)</a></li>
   <li><a href="https://ksh0685.github.io/20190411/jspintro.html" target="_blank">홈피수정(jspintro)</a></li>
