--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
   <li><a href="https://ksh0685.github.io/20190417/sampleDom.html" target="_blank">돔 실습(sampleDom)</a></li>
   <li><a href="https://ksh0685.github.io/20190417/htmlDom.html" target="_blank">HTML돔(htmlDom)</a></li>
   <li><a href="https://ksh0685.github.io/20190417/member1.html" target="_blank">CSS 객체 선택 실습(member1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/selectortag.html" target="_blank">셀렉터 태그(selectortag)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/selectorcls.html" target="_blank">셀렉터 클래스(selectorcls)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/selectorid.html" target="_blank">셀렉터 아이디(selectorid)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/pseudoselector.html" target="_blank">의사 셀렉터(pseudoselector)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/pseudoelmt.html" target="_blank">의사 엘리먼트()</a></li>
   <br/>
   <br/>
   </ol>
