--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <li><a href="https://ksh0685.github.io/20190418/selectorcls.html" target="_blank">셀렉터 클래스(selectorcls)</a></li>
   <li><a href="https://ksh0685.github.io/20190418/selectorid.html" target="_blank">셀렉터 아이디(selectorid)</a></li>
   <li><a href="https://ksh0685.github.io/20190418/pseudoselector.html" target="_blank">의사 셀렉터(pseudoselector)</a></li>
-  <li><a href="https://ksh0685.github.io/20190418/pseudoelmt.html" target="_blank">의사 엘리먼트()</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/pseudoelmt.html" target="_blank">의사 엘리먼트(pseudoelmt)</a></li>
   <br/>
   <br/>
   </ol>
