--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
   <li><a href="https://ksh0685.github.io/20190418/selectorid.html" target="_blank">셀렉터 아이디(selectorid)</a></li>
   <li><a href="https://ksh0685.github.io/20190418/pseudoselector.html" target="_blank">의사 셀렉터(pseudoselector)</a></li>
   <li><a href="https://ksh0685.github.io/20190418/pseudoelmt.html" target="_blank">의사 엘리먼트(pseudoelmt)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/complexDesc.html" target="_blank">복합선택자 후손(complexDesc)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/complexChild.html" target="_blank">복합선택자 자식(complexChild)</a></li>
+  <li><a href="https://ksh0685.github.io/20190418/complexBro.html" target="_blank">복합선택자 형제(complexBro)</a></li>
   <br/>
   <br/>
   </ol>
