--- a/20190411/Seasonalfood.html
+++ b/20190411/Seasonalfood.html
@@ -38,6 +38,8 @@ target.appendChild(opt);
    <label for="food">음식</label>
    <select id="foodx" name="food">
    </select>
+   <button type="submit">선택</button>
+   <input type="reset" name="reset1" value="취소"/>
   </fieldset>
  </section>
 </body></html>
