--- a/index.html
+++ b/index.html
@@ -138,9 +138,15 @@
               
                   <li id="week09">9주차
  <ol type="1">
-  <li><a href="https://ksh0685.github.io/20190501/cssText1.html" target="_blank">Css텍스트(cssText1)</a></li>
-  <li><a href="https://ksh0685.github.io/20190501/cssText1.htm2" target="_blank">Css텍스트2(cssText2)</a></li>
-
+  <li><a href="https://ksh0685.github.io/20190501/cssText1.html" target="_blank">텍스트(cssText1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190501/cssText2.html" target="_blank">텍스트2(cssText2)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssFont1.html" target="_blank">글씨체(cssFont1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssWidthHeight1.html" target="_blank">박스모델(cssWidthHeight)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssBg1.html" target="_blank">배경(cssBg1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssBorder1.html" target="_blank">보더(cssBorder1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssMargin1.html" target="_blank">마진(cssMargin1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssPadding1.html" target="_blank">패딩(cssPadding1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssBox1.html" target="_blank">박스 예제1(cssBox1)</a></li>
   <br/>
   <br/>
   </ol>
