--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <li><a href="https://ksh0685.github.io/20190502/cssBorder1.html" target="_blank">보더(cssBorder1)</a></li>
   <li><a href="https://ksh0685.github.io/20190502/cssMargin1.html" target="_blank">마진(cssMargin1)</a></li>
   <li><a href="https://ksh0685.github.io/20190502/cssPadding1.html" target="_blank">패딩(cssPadding1)</a></li>
-  <li><a href="https://ksh0685.github.io/20190502/cssBox1.html" target="_blank">박스 예제1(cssBox1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190502/cssBox1.html" target="_blank">박스 예1(cssBox1)</a></li>
   <br/>
   <br/>
   </ol>
