--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <li><a href="https://ksh0685.github.io/20190509/cssVis1.html" target="_blank">레이아웃Visibility(cssVis1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssDisplayInlineBlock1.html" target="_blank">인라인블럭(cssDisplayInlineBlock1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssStatic1.html" target="_blank">Static(cssStatic1)</a></li>
-  <li><a href="https://ksh0685.github.io/20190509/cssRelative1.html" target="_blank"Reletive(cssRelative1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190509/cssRelative1.html" target="_blank">Reletive(cssRelative1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssFixed1.html" target="_blank">Fixed(cssFixed1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssAbsolute1.html" target="_blank">Absolute(cssAbsolute1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssAbsoluteBody1.html" target="_blank">AbsoluteBody(cssAbsoluteBody1)</a></li>
