--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
   <li><a href="https://ksh0685.github.io/20190418/complexDesc.html" target="_blank">복합선택자 후손(complexDesc)</a></li>
   <li><a href="https://ksh0685.github.io/20190418/complexChild.html" target="_blank">복합선택자 자식(complexChild)</a></li>
   <li><a href="https://ksh0685.github.io/20190418/complexBro.html" target="_blank">복합선택자 형제(complexBro)</a></li>
+  <li><a href="https://ksh0685.github.io/20190417/style.css.html" target="_blank">style(style)</a></li>
+  <li><a href="https://ksh0685.github.io/20190417/sample.css" target="_blank">sample(sample)</a></li>
   <br/>
   <br/>
   </ol>
