--- a/20190509/Layout.html
+++ b/20190509/Layout.html
@@ -3,7 +3,7 @@
 <head>
 <meta content="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>홈페이지 레이아웃</title>
-<style type="text/css">
+<style>
     body {width: 1200px;}
     header, footer, nav, aside, section {border: 1px solid black; margin: 5px; padding: 10px;}
     header {height: 20px; width:1145px;}
@@ -13,8 +13,7 @@
     aside {width: 25%;}
     footer {height: 20%; width:1145px; clear: both;}
     p#center { text-align:center; }
-</style>
- 
+</style> 
 </head>
 <body>
     <div>
