--- a/20190509/Layout.html
+++ b/20190509/Layout.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
 <head>
-<meta content="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta content="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>홈페이지 레이아웃</title>
 <style>
-    body {width: 1200px;}
+    body {text-align: center; width: 1200px;}
     header, footer, nav, aside, section {border: 1px solid black; margin: 5px; padding: 10px;}
     header {height: 20px; width:1145px;}
     nav, section, aside {float: left; height: 400px; }
     nav {width: 25%;}
     section {width: 40%;}
     aside {width: 25%;}
-    footer {height: 20%; width:1145px; clear: both;}
+    footer {height: 20%; width:1145px;clear: both;}
     p#center { text-align:center; }
-</style> 
+</style>
 </head>
 <body>
     <div>
@@ -23,8 +23,6 @@
         <nav>
           <p id="center">Nav</p>
           <p id="center">(Menu)</p>
-         <ul>                
-         </ul>
         </nav>
         <section>
           <p id="center">Contents</p>            
