--- a/20190515/login5.html
+++ b/20190515/login5.html
@@ -19,7 +19,7 @@ a:active { color:red; text-decoration:none; }
  </style><title>로그인 실습</title></head>
 <body>
  <section id="section0"><h4>로그인</h4>
- <form action="https://jsptogo.herokuapp.com/jspsrc/login.jsp" method="post">
+ <form action="https://jsptogo.herokuapp.com/jspsrc/login5.jsp" method="post">
   <ul class="level_1">
    <li>
     <ul class="level_2">
