--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
   <li><a href="https://ksh0685.github.io/20190509/cssOverflowImage1.html" target="_blank">이미지 오버플로우(cssOverflowImage1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssFloat1.html" target="_blank">Float(cssFloat1)</a></li>
   <li><a href="https://ksh0685.github.io/20190509/cssClear1.html" target="_blank">Clear(cssClear1)</a></li>
+  <li><a href="https://ksh0685.github.io/20190509/Layout.html" target="_blank">홈페이지 레이아웃(Layout)</a></li>
   <br/>
   <br/>
   </ol>                  
