--- a/20190523/sampleMethod3.html
+++ b/20190523/sampleMethod3.html
@@ -14,7 +14,7 @@ a { text-decoration:none; }
     </style>
    <script>
 function fnTest1(){
-document.write("javascript 방법3 수동 실행!")
+document.write("자바스크립트 방법3 수동 실행!");
 }
 function fnTest2(){
 var accessTag=document.getElementsByTagName("h4")[0];
