--- a/20190523/sampleMethod3.html
+++ b/20190523/sampleMethod3.html
@@ -33,7 +33,7 @@ accessTag.innerHTML="javascript 방법3 수동실행!";
     <section>
      <h4>자바 스크립트 실행합니다</h4>
      <button onclick="fnTest1();">함수실행1</button>
-     <input type="button" onclick="fnTest2();" value="함수실행2"/>
+     <input type="button" onclick="fnTest2();" value="함수실행2">
     </section>
    <footer>
     <p>&copy; 20XX Made by Korea. All rights reserved.</p>
