--- a/20190523/sampleMethod4.html
+++ b/20190523/sampleMethod4.html
@@ -13,9 +13,9 @@ a { text-decoration:none; }
 #id_form { width:100px; height:14px; color:red; }
     </style>
    <script>
-window.onload = function(){
+window.onload=function(){
 document.getElementById("button1").addEventListener('click', function(){
-document.getElementByTagName("h4")[0].innerHTML="javascript 방법4 수동실생!";
+document.getElementsByTagName("h4")[0].innerHTML="javascript 방법4 수동실행!";
 });
 }
    </script>
