--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
  <li><a href="https://ksh0685.github.io/20190321/tableHw.html" target="_blank">테이블 태그(tableHw)</a></li>
  <li><a href="https://ksh0685.github.io/20190321/tableSpan.html" target="_blank">테이블 행열 합치기(tableSpan)</a></li>
  <li><a href="https://ksh0685.github.io/20190320/myTimeTable.html" target="_blank">시간표</a></li>
-  
   <br/>
   <br/>
    </ol>   
@@ -203,6 +202,37 @@
   <br/>
   </ol> 
                    
-                   
+   
+   
+ <li id="week12">12주차
+ <ol type="1">
+  <li><a href="https://ksh0685.github.io/20190522/rwd0.html" target="_blank">rwd0</a></li>
+  <li><a href="https://ksh0685.github.io/20190522/rwd1.html" target="_blank">rwd1</a></li>
+  <li><a href="https://ksh0685.github.io/20190522/rwd2.html" target="_blank">rwd2</a></li>
+  <li><a href="https://ksh0685.github.io/20190522/rwd4.html" target="_blank">rwd4</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleMethod0.html" target="_blank">sampleMethod0</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleMethod1.html" target="_blank">sampleMethod1</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleMethod2.html" target="_blank">sampleMethod2</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleMethod3.html" target="_blank">sampleMethod3</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleMethod4.html" target="_blank">sampleMethod4</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleMethod5.html" target="_blank">sampleMethod5</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleAll.html" target="_blank">sampleAll</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/sampleAllMod.html" target="_blank">sampleAllMod</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/forTest.html" target="_blank">forTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/ifTest.html" target="_blank">ifTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/ifTest2.html" target="_blank">ifTest2</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/operatorTest.html" target="_blank">operatorTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/switchTest.html" target="_blank">switchTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/varTest.html" target="_blank">varTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/whileTest.html" target="_blank">whileTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/docWrite1.html" target="_blank">docWrite1</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/docWrite2.html" target="_blank">docWrite2</a></li>
+  <li><a href="https://ksh0685.github.io/20190523/docWrite3.html" target="_blank">docWrite3</a></li>
+  <br/>
+  <br/>
+  </ol> 
+   
+   
+   
  </section>
 </body></html>
