--- a/index.html
+++ b/index.html
@@ -232,6 +232,28 @@
   <br/>
   </ol> 
    
+  
+  
+  <li id="week12">13주차
+ <ol type="1">
+  <li><a href="https://ksh0685.github.io/20190530/funcArgTest.html" target="_blank">funcArgTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/funcTest.html" target="_blank">funcTest</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getChildNodes.html" target="_blank">getChildNodes</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getElementByDOM.html" target="_blank">getElementByDOM</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getElementById.html" target="_blank">getElementById</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getElementByName.html" target="_blank">getElementByName</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getElementByTagName.html" target="_blank">getElementByTagName</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getSetAttribute.html" target="_blank">getSetAttribute</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getSetInnerHTML.html" target="_blank">getSetInnerHTML</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/getSetNodeValue.html" target="_blank">getSetNodeValue</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/nodeCopyPaste.html" target="_blank">nodeCopyPaste</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/nodeInsertBefore.html" target="_blank">nodeInsertBefore</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/nodeRemoveChild.html" target="_blank">nodeRemoveChild</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/onClickClassicHandler.html" target="_blank">onClickClassicHandler</a></li>
+  <li><a href="https://ksh0685.github.io/20190530/onClickHandler.html" target="_blank">onClickHandler</a></li>
+  <br/>
+  <br/>
+  </ol> 
    
    
  </section>
