--- a/ePortfolio/contest.html
+++ b/ePortfolio/contest.html
@@ -10,8 +10,8 @@
     "참가예정 공모전"
   </center>
   </p>
- <center><img src="contest1.png">
- <img src="contest2.png">
+ <center><img src="contest1.jpg">
+ <img src="contest2.jpg">
  </center>
   </body>
   </html>
