--- a/ePortfolio/edu.html
+++ b/ePortfolio/edu.html
@@ -7,10 +7,10 @@
   </head>
   <body>
   <p>1997.01.05 출생 </p>
-  <p>2004~2009 성산초등학교 졸업 </p>
-  <p>2010~2012 고림중학교 졸업 </p>
-  <p>2013~2015 용인고등학교 졸업 </p>
-  <p>(현)2016~ 대전대학교 재학 </p>
+  <p>2004 ~ 2009 성산초등학교 졸업 </p>
+  <p>2010 ~ 2012 고림중학교 졸업 </p>
+  <p>2013 ~ 2015 용인고등학교 졸업 </p>
+  <p>2016 ~ (현)대전대학교 재학 </p>
   <br/>
   <p> <경력> </p>
   <p> 2016.01~03 사무 보조 아르바이트 </p>
