--- a/ePortfolio/ePortfolio.html
+++ b/ePortfolio/ePortfolio.html
@@ -29,9 +29,9 @@
  <div id="main">
   <nav class="col-3 menu">  <!-- 메뉴 -->
    <ul><li><a href="https://ksh0685.github.io/">Internet Programming</a></li>
-   <li><a href="ksh0685.github.io/ePortfolio/edu.html">학력</a></li>
+   <li><a href="https://ksh0685.github.io/ePortfolio/edu.html">학력</a></li>
    <li><a href="https://ksh0685.github.io/ePortfolio/contest.html">공모전</a></li>
-   <li><a href="ksh0685.github.io/ePortfolio/C++.html">C++</a></li></ul></nav>
+   <li><a href="https://ksh0685.github.io/ePortfolio/C++.html">C++</a></li></ul></nav>
   <section class="col-6">
    <h3><center>컴퓨터공학과 20161386 강세형</center></h3><p></p></section>
   <aside class="col-3 banner">
