--- a/ePortfolio/ePortfolio.html
+++ b/ePortfolio/ePortfolio.html
@@ -33,7 +33,7 @@
    <li><a href="https://ksh0685.github.io/ePortfolio/contest.html">공모전</a></li>
    <li><a href="https://ksh0685.github.io/ePortfolio/C++.html">C++</a></li></ul></nav>
   <section class="col-6">
-   <h3><center>컴퓨터공학과 20161386 강세형</center></h3><p></p></section>
+   <h3><center>컴퓨터공학과 20161386 강세형</center></h3><p><center><img src="ground.jpg"/></center></p></section>
   <aside class="col-3 banner">
    <ul><li><img src="../20190501/taegeuk.png"></li><li><img src="logo.gif"/></li></ul></aside>
   </div><div class="row"></div>
